--- a/ui/progress-slider/progressSlider.css
+++ b/ui/progress-slider/progressSlider.css
@@ -34,6 +34,7 @@
     outline: none;
     border-radius: 25px;
     border: 1px solid var(--gray);
+    cursor: pointer;
 }
 
 .progress-slider::-webkit-slider-thumb {
